<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.FormActivity">

    <TextView
        android:id="@+id/form_tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_tv_nombre"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/form_et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_tv_nombre"
        android:hint="@string/form_tv_nombre"
        android:inputType="text"/>
    <TextView
        android:id="@+id/form_tv_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_et_nombre"
        android:text="@string/form_tv_edad"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/form_et_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_tv_edad"
        android:hint="@string/form_tv_edad"
        android:inputType="number"/>
    <TextView
        android:id="@+id/form_tv_profesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_et_edad"
        android:text="@string/form_tv_profesion"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/form_et_profesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_tv_profesion"
        android:hint="@string/form_tv_profesion" />


    <RelativeLayout
        android:id="@+id/form_rl_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/form_et_profesion">

        <Button
            android:id="@+id/form_btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:text="@string/btn_volver"
            android:onClick="goToMain"/>
        <Button
            android:id="@+id/form_btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="@string/btn_guardar"
            android:onClick="guardar"/>


    </RelativeLayout>

</RelativeLayout>